footer authors alignment fix

--- a/css/main.css
+++ b/css/main.css
@@ -242,6 +242,7 @@ footer img:hover {
 
 .line::before, .line::after {
   content: '  ';
+  display: inline-block;
   white-space: pre;
 }
 
